Fix sizing issues while preserving overflow of autocomplete

--- a/SimpleCircuitOnline/Pages/Index.razor.css
+++ b/SimpleCircuitOnline/Pages/Index.razor.css
@@ -20,9 +20,19 @@
     grid-area: output;
     overflow: auto;
 }
-.help {
-    width: 100%;
-    height: 100%;
+.content {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    box-sizing: border-box;
+    padding: 0.5rem;
+}
+.fixed {
+    overflow: visible;
+}
+.scrollable {
     overflow: auto;
 }
 .btn {
@@ -43,10 +53,6 @@
 }
 .btn:hover {
     background-color: #404040;
-}
-.full-width {
-    width: 100%;
-    text-align: center;
 }
 .arrow-mode {
     display: none;
